fdo#46020: fixed missing footnote docx/doc/rtf export

Don't skip a next position when parsing a paragraph into runs to export.

Change-Id: If7e887ea84ad24256b37aa96187bc30ea154632b